<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/background_main"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pdg_root"
        android:layout_marginVertical="10dp"

        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/fs_btn" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/pdg_root"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        >
        <Button
            app:icon="@drawable/icon_search"
            android:text="@string/button_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/btn_icon_pdg"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/cr_btn"
            style="@style/MainPageButton"
            android:id="@+id/button_search"
            />
        <Button
            app:icon="@drawable/icon_media"
            android:text="@string/button_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/btn_icon_pdg"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/cr_btn"
            style="@style/MainPageButton"
            android:id="@+id/button_media"
            />

        <Button
            style="@style/MainPageButton"
            android:text="@string/button_settings"
            app:cornerRadius="@dimen/cr_btn"
            app:icon="@drawable/icon_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/btn_icon_pdg"
            app:iconTint="@color/black"
            android:id="@+id/button_settings"
            />
    </LinearLayout>
</LinearLayout>
