<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/white"
    android:id="@+id/activity_settings"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal"
        android:padding="@dimen/header_padding"
        >

        <ImageView
            android:layout_width="@dimen/header_image_layout_size"
            android:layout_height="@dimen/header_image_layout_size"
            android:padding="@dimen/header_image_padding"
            android:src="@drawable/icon_back"
            android:onClick="btnBackClick"
            android:tooltipText="@string/button_back"
            android:contentDescription="@string/button_back"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/header_text_leftpadding"
            android:text="@string/button_settings"
            android:textColor="@color/black"
            android:gravity="left|center"
            android:textFontWeight="500"
            android:textSize="@dimen/fs_btn" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/pdg_root">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/settings_item_container_padding"
            android:paddingBottom="@dimen/settings_item_container_padding"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_button_darktheme"
                android:textSize="@dimen/settings_btn_text"
            />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/settings_icon_height"
                android:layout_gravity="end"
                android:src="@drawable/icon_dark_disabled"
                android:contentDescription="@string/settings_button_darktheme"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/settings_item_container_padding"
            android:paddingBottom="@dimen/settings_item_container_padding"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_button_share"
                android:textSize="@dimen/settings_btn_text"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/settings_icon_height"
                android:layout_gravity="end"
                android:src="@drawable/icon_share"
                android:contentDescription="@string/settings_button_share"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/settings_item_container_padding"
            android:paddingBottom="@dimen/settings_item_container_padding"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_button_support"
                android:textSize="@dimen/settings_btn_text"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/settings_icon_height"
                android:layout_gravity="end"
                android:src="@drawable/icon_support"
                android:contentDescription="@string/settings_button_support"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/settings_item_container_padding"
            android:paddingBottom="@dimen/settings_item_container_padding"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_button_user_agreement"
                android:textSize="@dimen/settings_btn_text"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/settings_icon_height"
                android:layout_gravity="end"
                android:src="@drawable/icon_user_agreement"
                android:contentDescription="@string/settings_button_user_agreement"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>