<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/media_fragment">
    <fragment
        android:id="@+id/media_fragment"
        android:name="com.il76.playlistmaker.media.ui.MediaFragment"
        android:label="@string/button_media"
        tools:layout="@layout/fragment_media" >
        <action
            android:id="@+id/action_media_fragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_media_fragment_to_fragment_playlistadd"
            app:destination="@id/fragment_playlistadd" />
        <action
            android:id="@+id/action_media_fragment_to_fragment_playlist"
            app:destination="@id/fragment_playlist" />
    </fragment>
    <fragment
        android:id="@+id/search_fragment"
        android:name="com.il76.playlistmaker.search.ui.SearchFragment"
        android:label="@string/button_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_fragment_to_playerFragment"
            app:destination="@id/playerFragment"
            app:popUpTo="@id/search_fragment" />
    </fragment>
    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.il76.playlistmaker.settings.ui.SettingsFragment"
        android:label="@string/button_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/playerFragment"
        android:name="com.il76.playlistmaker.player.ui.PlayerFragment"
        android:label="fragment_player"
        tools:layout="@layout/fragment_player" >
        <action
            android:id="@+id/action_playerFragment_to_fragment_playlistadd"
            app:destination="@id/fragment_playlistadd" />
    </fragment>
    <fragment
        android:id="@+id/fragment_playlistadd"
        android:name="com.il76.playlistmaker.media.ui.PlaylistAddFragment"
        android:label="fragment_playlistadd"
        tools:layout="@layout/fragment_playlistadd" />
    <fragment
        android:id="@+id/fragment_playlist"
        android:name="com.il76.playlistmaker.playlist.ui.PlaylistFragment"
        android:label="fragment_playlist"
        tools:layout="@layout/fragment_playlist">
        <argument
            android:name="Номер плейлиста"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_fragment_playlist_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>
</navigation>